# ChompoC

./: .clang-format  CMakeLists.txt  README.md  README_RU.md  ast.h  ast_printer.cpp  ast_printer.h  interpreter.cpp  main.cpp  parser.cpp  parser.h  test_code.chmp  test_code.txt  token.cpp  token.h
.github/workflows/: ci.yml  wiki-sync.yml
docs/wiki/: .slot-runtime-branch-base  Arrays-and-Strings.md  Built-in-Functions.md  Functions-and-Scopes.md  Getting-Started.md  Home.md  Input-and-Output.md  LangJam-Chat.md  Language-Syntax.md  Network-API.md  Runtime-and-Performance.md  Types-and-Operators.md  _Sidebar.md
langjam/Chompo/: README.md  chat_client.chmp  chat_server.chmp
src/: main.cpp
src/interpreter/: callable.cpp  callable.h  collection_builtins.cpp  environment.cpp  environment.h  interpreter.cpp  interpreter.h  io_builtins.cpp  io_manager.cpp  io_manager.h  network_builtins.cpp  network_manager.cpp  runtime_error.cpp  runtime_error.h  secure_channel.cpp  secure_channel.h  system_builtins.cpp  value.cpp  value.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h  resolver.cpp  resolver.h
tests/: chat_smoke.py  run_case.cmake  run_io_suite.cmake  sleep_test.cpp  test_code.chmp
tests/cases/: collections.chmp
tests/expected/: collections.txt  in_invalid_container.txt  membership.txt
tests/performance/: run_performance_suite.py
